# Corion

./: CMakeLists.txt  README.md  testFile.txt
Objects/Bottle/: details.xml
Objects/Clock/: details.xml
Objects/HeadPhones/: details.xml
Objects/Mug/: details.xml
Objects/TrainedModels/: Bottle.svm  Clock.svm  HeadPhones.svm  Mug.svm
files/: grammarTest.jsgf  testFile.txt
src/: CRobotController.cpp  CRobotController.h  Cerebrum.cpp  Cerebrum.h  Corion_v1.0.cpp  delete.txt
src/communication/: CSocketClient.cpp  CSocketClient.h
src/config/: Constants.cpp  Constants.h  MotionModes.cpp  MotionModes.h  NeoCommands.cpp  NeoCommands.h  Types.h
src/interfaces/: CtypeThread.h  GuiInterface.h
src/logger/: Logger.cpp  Logger.h
src/messages/: CBuffer.cpp  CBuffer.h  CNeoMessage.cpp  CNeoMessage.h
src/speech/: CSpeechRecog.cpp  CSpeechRecog.h  CSpeechRecogForUI.h
src/state_events/: CEventBuffer.cpp  CEventBuffer.h  EventTypes.h
src/ui/: CDialogBox.cpp  CDialogBox.h  CDrawingBoard.cpp  CDrawingBoard.h  CHelper.cpp  CHelper.h  CMainWindow.cpp  CMainWindow.h  CObjectDetails.cpp  CObjectDetails.h  CObjectXmlParser.cpp  CObjectXmlParser.h  CRubberBand.cpp  CRubberBand.h  CToastMsg.cpp  CToastMsg.h  GuiLauncher.cpp  GuiLauncher.h  mainwindow.ui  testFile.txt  ui.pro
src/vision/: CObjectDatabase.cpp  CObjectDatabase.h  CObjectDetector.cpp  CObjectDetector.h  CVisionController.cpp  CVisionController.h
